# pam_explainer

./: .gitignore  Cargo.toml  Makefile  README.md  SECURITY.md  testfile.txt  testresults.json
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: dependabot_auto_merge.yml  github_pages_deploy.yml
pam_explainer/: Cargo.toml
pam_explainer/src/: lib.rs  main.rs
src/: lib.rs  main.rs
src/static/css/: style.css
src/static/js/: preact.js  preact.mjs  preact.mjs.map
static/: index.html
static/css/: style.css
wasm/: Cargo.toml
wasm/pkg/: wasm.js  wasm_bg.wasm
wasm/src/: lib.rs
wasm/src/components/: mod.rs  ruleset.rs
