[package]
name = "pam_explainer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["form", "macros", "tracing", "headers"] }
axum-macros = "0.3.8"
dialoguer = "0.10.4"
enum-iterator = "1.4.1"
log = "0.4.20"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
sha256 = "1.4.0"
tokio = { version = "1.32.0", features = ["full", "tracing"] }
tower-http = { version = "0.4.4", features = ["tokio", "fs"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
