[workspace]
resolver = "2"
members = ["pam_explainer", "wasm"]

[workspace.package]
version = "0.0.1"
description = "PAM Explainer - Helper to work out the PAM stack for a given service"
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
rust-version = "1.71"
edition = "2021"
license = "MPL-2.0"
homepage = "https://github.com/yaleman/pam_explainer/"
repository = "https://github.com/yaleman/pam_explainer/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
sha256 = { version = "1.5.0", default-features = false }
axum = { version = "0.6.20", features = [
    "form",
    "macros",
    "tracing",
    "headers",
] }
axum-macros = "0.3.8"
dialoguer = "0.10.4"
enum-iterator = "1.5.0"
log = "0.4.22"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full", "tracing"] }
tower-http = { version = "0.4.4", features = ["tokio", "fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
