[package]
name = "pam_explainer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true, optional = true }
axum-macros = { workspace = true, optional = true }
dialoguer = { workspace = true, optional = true }
enum-iterator = { workspace = true }
log = { workspace = true }
pretty_env_logger = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha256 = { workspace = true }
tokio = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
cli = ["dialoguer", "pretty_env_logger"]
web = ["tokio", "tower-http", "axum", "axum-macros"]
default = []
