[package]
name = "wasm"
version = "0.1.0"
edition = "2021"
description = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-console = "0.3.0"
pam_explainer = { path = "../pam_explainer" }
wasm-bindgen = "0.2.90"
web-sys = { version = "0.3.66", features = [
    "HtmlTextAreaElement",
    "HtmlInputElement",
    "console",
    "css",
] }
yew = { version = "0.21.0", features = ["csr"] }


[lib]
crate-type = ["cdylib", "rlib"]
